--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.5.5"
+  },
+  "dependencies": {
+    "say": "^0.16.0"
   }
 }
