Changes to be committed: 	modified:   README.md 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "learning-node",
+  "name": "mocktest",
   "version": "1.0.0",
-  "description": "learing node js",
+  "description": "This repository provides a command-line mock test for Node.js and related technologies. It is designed to help developers assess their knowledge and skills in various areas of modern JavaScript development. The test includes a variety of questions on topics such as Node.js, TypeScript, Jest, React, React Native, Babel, Webpack, and Oracle SQL",
   "main": "index.ts",
   "type": "commonjs",
   "scripts": {
+    "start": "ts-node index.ts",
     "test": "jest"
   },
   "author": "Nitesh Ranjan Mohanty",
