--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@types/node": "^22.5.5"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "ejs": "^3.1.10",
+    "express": "^4.21.0",
+    "express-session": "^1.18.0",
+    "readline": "^1.3.0",
     "say": "^0.16.0"
   }
 }
