--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
-    "compilerOptions": {
-      "module": "commonjs",
-      "target": "es6",
-      "esModuleInterop": true
-    }
+  "compilerOptions": {
+    "module": "NodeNext",
+    "target": "ES6",
+    "esModuleInterop": true,
+    "allowJs": false
   }
-  
+}
