--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Nitesh Ranjan Mohanty",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.5.5"
+    "@types/node": "^22.5.5",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "body-parser": "^1.20.3",
