--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
+    "marked": "^14.1.2",
     "readline": "^1.3.0",
     "say": "^0.16.0"
   }
